##############################################################################
#
# top_srcdir/share/include
#
##############################################################################

SUBDIRS = \
	mf \
	pmf

root_path = $(DESTDIR)$(pkgdatadir)
version_path = $(root_path)/$(PACKAGE_VERSION)

install_path = $(version_path)/include

##############################################################################
# targets
##############################################################################

uninstall-local:
	-rmdir -v '$(install_path)'

##############################################################################
# eof
##############################################################################
