##############################################################################
#
# top_srcdir/share/include
#
##############################################################################

SUBDIRS = \
	mfi \
	mfs_library \
	pmf

root_path = $(DESTDIR)$(pkgdatadir)
version_path = $(root_path)/$(PACKAGE_VERSION)
install_path = $(version_path)/include

##############################################################################
# targets
##############################################################################

uninstall-local:
	-test -d '$(install_path)' && rmdir -v '$(install_path)'

##############################################################################
# eof
##############################################################################
