##############################################################################
#
# top_srcdir/share/templates
#
##############################################################################

# lib depends on: examples and scripts (build afterwards)
SUBDIRS = \
	df1

root_path = $(DESTDIR)$(pkgdatadir)
version_path = $(root_path)/$(PACKAGE_VERSION)

install_path = $(version_path)/templates

##############################################################################
# targets
##############################################################################

uninstall-local:
	-rmdir -v '$(install_path)'

##############################################################################
# eof
##############################################################################
