##############################################################################
#
# top_srcdir/share/templates
#
##############################################################################

SUBDIRS = \
	df1

root_path = $(DESTDIR)$(pkgdatadir)
version_path = $(root_path)/$(PACKAGE_VERSION)
install_path = $(version_path)/templates

##############################################################################
# targets
##############################################################################

uninstall-local:
	-test -d '$(install_path)' && rmdir -v '$(install_path)'

##############################################################################
# eof
##############################################################################
